Kernel is now in C++ :)

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -62,6 +62,9 @@ $(ARCHDIR)/crtbegin.o $(ARCHDIR)/crtend.o:
 .c.o:
 	$(CC) -MD -c $< -o $@ -std=gnu11 $(CFLAGS) $(CPPFLAGS)
  
+.cpp.o:
+	$(CXX) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
+ 
 .S.o:
 	$(CC) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
  
