--- a/libc/Makefile
+++ b/libc/Makefile
@@ -40,6 +40,7 @@ string/memset.o \
 string/strcpy.o \
 string/strlen.o \
 string/strncpy.o \
+string/strstr.o \
  
 HOSTEDOBJS=\
 $(ARCH_HOSTEDOBJS) \
