--- a/libc/Makefile
+++ b/libc/Makefile
@@ -13,8 +13,8 @@ EXEC_PREFIX?=$(PREFIX)
 INCLUDEDIR?=$(PREFIX)/include
 LIBDIR?=$(EXEC_PREFIX)/lib
  
-CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra
-CPPFLAGS:=$(CPPFLAGS) -D__is_libc -Iinclude
+CFLAGS:=$(CFLAGS) -D__is_libc -Iinclude -ffreestanding -Wall -Wextra
+CPPFLAGS:=$(CPPFLAGS)
 LIBK_CFLAGS:=$(CFLAGS)
 LIBK_CPPFLAGS:=$(CPPFLAGS) -D__is_libk
  
@@ -26,6 +26,8 @@ CFLAGS:=$(CFLAGS) $(ARCH_CFLAGS)
 CPPFLAGS:=$(CPPFLAGS) $(ARCH_CPPFLAGS)
 LIBK_CFLAGS:=$(LIBK_CFLAGS) $(KERNEL_ARCH_CFLAGS)
 LIBK_CPPFLAGS:=$(LIBK_CPPFLAGS) $(KERNEL_ARCH_CPPFLAGS)
+ 
+BUILDDIR=$(abspath build)
  
 FREEOBJS=\
 $(ARCH_FREEOBJS) \
@@ -54,33 +56,36 @@ LIBK_OBJS=$(FREEOBJS:.o=.libk.o)
 #BINARIES=libc.a libk.a # Not ready for libc yet.
 BINARIES=libk.a
  
-.PHONY: all clean install install-headers install-libs
+.PHONY: all always clean install install-headers install-libs
 .SUFFIXES: .o .libk.o .cpp .S
  
 all: $(BINARIES)
  
-libc.a: $(OBJS)
-	$(AR) rcs $@ $(OBJS)
+libc.a: always $(OBJS)
+	cd $(BUILDDIR) && $(AR) rcs $@ $(OBJS)
  
-libk.a: $(LIBK_OBJS)
-	$(AR) rcs $@ $(LIBK_OBJS)
+libk.a: always $(LIBK_OBJS)
+	cd $(BUILDDIR) && $(AR) rcs $@ $(LIBK_OBJS)
  
 .cpp.o:
-	$(CXX) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
+	$(CXX) -MD -c $< -o $(BUILDDIR)/$@ $(CFLAGS) $(CPPFLAGS)
  
 .S.o:
-	$(CXX) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
+	$(CXX) -MD -c $< -o $(BUILDDIR)/$@ $(CFLAGS) $(CPPFLAGS)
  
 .cpp.libk.o:
-	$(CXX) -MD -c $< -o $@ $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
+	$(CXX) -MD -c $< -o $(BUILDDIR)/$@ $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
  
 .S.libk.o:
-	$(CXX) -MD -c $< -o $@ $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
+	$(CXX) -MD -c $< -o $(BUILDDIR)/$@ $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
  
 clean:
-	rm -f $(BINARIES) *.a
-	rm -f $(OBJS) $(LIBK_OBJS) *.o */*.o */*/*.o
-	rm -f $(OBJS:.o=.d) $(LIBK_OBJS:.o=.d) *.d */*.d */*/*.d
+	rm -rf $(BUILDDIR)
+ 
+always:
+	mkdir -p $(BUILDDIR)/stdio
+	mkdir -p $(BUILDDIR)/stdlib
+	mkdir -p $(BUILDDIR)/string
  
 install: install-headers install-libs
  
@@ -90,7 +95,7 @@ install-headers:
  
 install-libs: $(BINARIES)
 	mkdir -p $(DESTDIR)$(LIBDIR)
-	cp $(BINARIES) $(DESTDIR)$(LIBDIR)
+	cp $(BUILDDIR)/$(BINARIES) $(DESTDIR)$(LIBDIR)
  
 -include $(OBJS:.o=.d)
 -include $(LIBK_OBJS:.o=.d)
