--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -3,12 +3,13 @@ KERNEL_ARCH_CPPFLAGS=
 KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
  
-KERNEL_ARCH_OBJS=\
-$(ARCHDIR)/boot.o \
-$(ARCHDIR)/tty.o \
-$(ARCHDIR)/CPUID.o \
-$(ARCHDIR)/GDT.o \
-$(ARCHDIR)/GDT_asm.o \
-$(ARCHDIR)/IDT.o \
-$(ARCHDIR)/IDT_asm.o \
-$(ARCHDIR)/VESA.o \
+KERNEL_ARCH_OBJS=		\
+$(ARCHDIR)/boot.o		\
+$(ARCHDIR)/CPUID.o		\
+$(ARCHDIR)/font.o		\
+$(ARCHDIR)/GDT_asm.o	\
+$(ARCHDIR)/GDT.o		\
+$(ARCHDIR)/IDT_asm.o	\
+$(ARCHDIR)/IDT.o		\
+$(ARCHDIR)/tty.o		\
+$(ARCHDIR)/VESA.o		\
