Kernel: Replace PIC with APIC
If APIC/IOAPIC is not found, we fallback to PIC

Interrupts don't seem to work on real hardware (?)

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -4,6 +4,7 @@ KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
  
 KERNEL_ARCH_OBJS=		\
+$(ARCHDIR)/APIC.o		\
 $(ARCHDIR)/boot.o		\
 $(ARCHDIR)/CPUID.o		\
 $(ARCHDIR)/font.o		\
