--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -10,5 +10,6 @@ $(ARCHDIR)/CPUID.o		\
 $(ARCHDIR)/font.o		\
 $(ARCHDIR)/GDT.o		\
 $(ARCHDIR)/IDT.o		\
+$(ARCHDIR)/Paging.o		\
 $(ARCHDIR)/TTY.o		\
 $(ARCHDIR)/VESA.o		\
