Kernel: Multiboot data and kernel command lines are now global variables

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -9,5 +9,6 @@ $(ARCHDIR)/boot.o		\
 $(ARCHDIR)/CPUID.o		\
 $(ARCHDIR)/GDT.o		\
 $(ARCHDIR)/IDT.o		\
+$(ARCHDIR)/MMU.o		\
 $(ARCHDIR)/Paging.o		\
 $(ARCHDIR)/VESA.o		\
