--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -10,4 +10,6 @@ $(ARCHDIR)/CPUID.o		\
 $(ARCHDIR)/GDT.o		\
 $(ARCHDIR)/IDT.o		\
 $(ARCHDIR)/MMU.o		\
+$(ARCHDIR)/Panic.o		\
 $(ARCHDIR)/VESA.o		\
+ 
