Kernel: Move dump_backtrace() out of arch.
I discovered __builtin_frame_address()

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -36,6 +36,7 @@ kernel/font.o			\
 kernel/Input.o			\
 kernel/kernel.o			\
 kernel/kmalloc.o		\
+kernel/Panic.o			\
 kernel/PIC.o			\
 kernel/PIT.o			\
 kernel/RTC.o			\
