--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -29,22 +29,23 @@ LIBS:=$(LIBS) $(KERNEL_ARCH_LIBS)
 
 BUILDDIR=$(abspath build)
  
-KERNEL_OBJS=			\
-$(KERNEL_ARCH_OBJS)		\
-kernel/build_libc.o		\
-kernel/font.o			\
-kernel/Input.o			\
-kernel/kernel.o			\
-kernel/kmalloc.o		\
-kernel/Panic.o			\
-kernel/PIC.o			\
-kernel/PIT.o			\
-kernel/RTC.o			\
-kernel/Serial.o			\
-kernel/Shell.o			\
-kernel/SSP.o			\
-kernel/TTY.o			\
-icxxabi.o				\
+KERNEL_OBJS=				\
+$(KERNEL_ARCH_OBJS)			\
+kernel/build_libc.o			\
+kernel/font.o				\
+kernel/Input.o				\
+kernel/kernel.o				\
+kernel/kmalloc.o			\
+kernel/Panic.o				\
+kernel/PIC.o				\
+kernel/PIT.o				\
+kernel/RTC.o				\
+kernel/Serial.o				\
+kernel/Shell.o				\
+kernel/SSP.o				\
+kernel/TTY.o				\
+kernel/VesaTerminalDriver.o	\
+icxxabi.o					\
  
 OBJS=					\
 $(ARCHDIR)/crti.o		\
