Kernel: Move CPUID out of arch/
CPUID instructions behaves the same on x86 and x86_64. I am not
planning on supporting any non x86 based architectures.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -32,6 +32,7 @@ BUILDDIR=$(abspath build)
 KERNEL_OBJS=				\
 $(KERNEL_ARCH_OBJS)			\
 kernel/build_libc.o			\
+kernel/CPUID.o				\
 kernel/font.o				\
 kernel/Input.o				\
 kernel/kernel.o				\
