Kernel: Move debug printing to its own file
It didn't make sense that dprint was defined in Serial.h.
We also now dump dprint to tty if there is no serial and tty is initialized

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -34,6 +34,7 @@ $(KERNEL_ARCH_OBJS)				\
 kernel/APIC.o					\
 kernel/build_libc.o				\
 kernel/CPUID.o					\
+kernel/Debug.o					\
 kernel/font.o					\
 kernel/Input.o					\
 kernel/InterruptController.o	\
