--- a/kernel/arch/x86_64/make.config
+++ b/kernel/arch/x86_64/make.config
@@ -6,6 +6,7 @@ KERNEL_ARCH_LIBS=
 KERNEL_ARCH_OBJS=		\
 $(ARCHDIR)/boot.o		\
 $(ARCHDIR)/IDT.o		\
-$(ARCHDIR)/MMU.o		\
 $(ARCHDIR)/interrupts.o	\
+$(ARCHDIR)/MMU.o		\
+$(ARCHDIR)/SpinLock.o	\
  
