Kernel: Implement somewhat functioning multithread support
This still uses only a single cpu, but we can now have 'parallelization'

This seems to work fine in qemu and bochs, but my own computer did not
like this when I last tried.

I have absolutely no idea how multithreading should actually be
implmemented and I just thought and implemented the most simple one I
could think of. This might not be in any way correct :D

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -43,10 +43,12 @@ kernel/kmalloc.o				\
 kernel/PIC.o					\
 kernel/PIT.o					\
 kernel/RTC.o					\
+kernel/Scheduler.o				\
 kernel/Serial.o					\
 kernel/Shell.o					\
 kernel/SpinLock.o				\
 kernel/SSP.o					\
+kernel/Thread.o					\
 kernel/TTY.o					\
 kernel/VesaTerminalDriver.o		\
 icxxabi.o						\
