All: Move to c++20

--- a/BAN/Makefile
+++ b/BAN/Makefile
@@ -16,7 +16,7 @@ LIBDIR?=$(EXEC_PREFIX)/lib
 CFLAGS:=$(CFLAGS) -Iinclude -ffreestanding -Wall -Wextra -Werror=return-type
 CPPFLAGS:=$(CPPFLAGS)
 LIBBANK_CFLAGS:=$(CFLAGS) -D__is_kernel -Iinclude -ffreestanding -Wall -Wextra
-LIBBANK_CPPFLAGS:=$(CPPFLAGS) -fno-rtti -fno-exceptions -fno-threadsafe-statics
+LIBBANK_CPPFLAGS:=$(CPPFLAGS) -fno-rtti -fno-exceptions
  
 ARCHDIR=arch/$(HOSTARCH)
  
