--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -32,9 +32,11 @@ BUILDDIR=$(abspath build)
 KERNEL_OBJS=					\
 $(KERNEL_ARCH_OBJS)				\
 kernel/APIC.o					\
+kernel/ATA.o					\
 kernel/build_libc.o				\
 kernel/CPUID.o					\
 kernel/Debug.o					\
+kernel/DiskIO.o					\
 kernel/font.o					\
 kernel/Input.o					\
 kernel/InterruptController.o	\
