Kernel: Fonts can now be parsed from the filesystem and set to terminal
We currently dont have a fallback font if we cannot get to filesystem
initialization, but that will come later. I can't test on real hardware
for this reason.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -37,7 +37,7 @@ kernel/build_libc.o				\
 kernel/CPUID.o					\
 kernel/Debug.o					\
 kernel/DiskIO.o					\
-kernel/font.o					\
+kernel/Font.o					\
 kernel/FS/Ext2.o				\
 kernel/FS/VirtualFileSystem.o	\
 kernel/Input.o					\
