--- a/kernel/arch/x86_64/make.config
+++ b/kernel/arch/x86_64/make.config
@@ -3,6 +3,8 @@ KERNEL_ARCH_CPPFLAGS=
 KERNEL_ARCH_LDFLAGS=-z max-page-size=4096
 KERNEL_ARCH_LIBS=
  
+ELF_FORMAT=elf64-x86-64
+
 KERNEL_ARCH_OBJS=		\
 $(ARCHDIR)/boot.o		\
 $(ARCHDIR)/IDT.o		\
