--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -3,6 +3,8 @@ KERNEL_ARCH_CPPFLAGS=
 KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
  
+ELF_FORMAT=elf32-i386
+
 KERNEL_ARCH_OBJS=		\
 $(ARCHDIR)/boot.o		\
 $(ARCHDIR)/IDT.o		\
