--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -45,6 +45,7 @@ kernel/Input.o					\
 kernel/InterruptController.o	\
 kernel/kernel.o					\
 kernel/kmalloc.o				\
+kernel/PCI.o					\
 kernel/PIC.o					\
 kernel/PIT.o					\
 kernel/RTC.o					\
