Kernel: Initialize GDT in kernel code
We dont use the boot GDT only while booting

--- a/kernel/arch/x86_64/make.config
+++ b/kernel/arch/x86_64/make.config
@@ -7,6 +7,7 @@ ELF_FORMAT=elf64-x86-64
 
 KERNEL_ARCH_OBJS=		\
 $(ARCHDIR)/boot.o		\
+$(ARCHDIR)/GDT.o		\
 $(ARCHDIR)/IDT.o		\
 $(ARCHDIR)/interrupts.o	\
 $(ARCHDIR)/MMU.o		\
