--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -7,6 +7,7 @@ ELF_FORMAT=elf32-i386
 
 KERNEL_ARCH_OBJS=		\
 $(ARCHDIR)/boot.o		\
+$(ARCHDIR)/GDT.o		\
 $(ARCHDIR)/IDT.o		\
 $(ARCHDIR)/MMU.o		\
 $(ARCHDIR)/SpinLock.o	\
