Kernel: Add basic concept of Processes
We now create Shell as a process that has its own threads

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -50,6 +50,7 @@ kernel/kmalloc.o				\
 kernel/PCI.o					\
 kernel/PIC.o					\
 kernel/PIT.o					\
+kernel/Process.o				\
 kernel/RTC.o					\
 kernel/Scheduler.o				\
 kernel/Serial.o					\
