Kernel: Move ATADevice to its own file from ATAController
The API is kinda weird since device reads/writes go from
ATADevice -> ATAController -> ATADevice
but this is for now atleast necessary since ATAController has(?)
to keep all devices from using the disks at the same time

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -39,6 +39,7 @@ set(KERNEL_SOURCES
 	kernel/SpinLock.cpp
 	kernel/SSP.cpp
 	kernel/Storage/ATAController.cpp
+	kernel/Storage/ATADevice.cpp
 	kernel/Storage/StorageDevice.cpp
 	kernel/Syscall.cpp
 	kernel/Thread.cpp
