Kernel: ATA now uses irqs instead of polling
Reading is now much slower at ~500 kB/s it was around 3 MB/s.
This is probably mostly due semaphore blocking taking atleast
until next reschedule (1 ms itervals). This will be a problem
as long as we are using only single processor.

I could try to use {READ/WRITE}_MULTIPLE commands, but since
most of the disk reads are 2 sectors (inode block size) this
will at most double the speed.

Most efficient speed up would of course be caching disk access
data and inodes overall.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -38,6 +38,7 @@ set(KERNEL_SOURCES
 	kernel/Shell.cpp
 	kernel/SpinLock.cpp
 	kernel/SSP.cpp
+	kernel/Storage/ATABus.cpp
 	kernel/Storage/ATAController.cpp
 	kernel/Storage/ATADevice.cpp
 	kernel/Storage/StorageDevice.cpp
