Kernel: Start work on making tty a file
TTY is now a file that you can read from/write to. I still have
to port shell to use this new interface

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -43,8 +43,8 @@ set(KERNEL_SOURCES
 	kernel/Storage/StorageDevice.cpp
 	kernel/Syscall.cpp
 	kernel/Thread.cpp
-	kernel/TTY.cpp
-	kernel/VesaTerminalDriver.cpp
+	kernel/Terminal/TTY.cpp
+	kernel/Terminal/VesaTerminalDriver.cpp
 	userspace/userspace.cpp
 	icxxabi.cpp
 )
