BuildSystem: you can now build the toolchain with cmake

--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.26)
 
 project(BAN CXX)
 
-add_custom_target(ban-install
+add_custom_target(ban-headers
 	COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/include/* ${BANAN_INCLUDE}
 	DEPENDS sysroot
 )
+
+add_custom_target(ban-install
+	DEPENDS ban-headers
+)
+
