--- a/libc/CMakeLists.txt
+++ b/libc/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.26)
 
 project(libc CXX)
 
-add_custom_target(libc-install
+add_custom_target(libc-headers
 	COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/include/* ${BANAN_INCLUDE}
 	DEPENDS sysroot
 )
+
+add_custom_target(libc-install
+	DEPENDS libc-headers
+)
+
