--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.26)
 project(BAN CXX)
 
 add_custom_target(ban-headers
-	COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/include/* ${BANAN_INCLUDE}
+	COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/include ${BANAN_INCLUDE}
 	DEPENDS sysroot
 )
 
