Kernel: remove message from BAN::Error
We don't store the error message anymore in BAN::Error.
Instead we store a error code that can be mapped into a string.
This allows BAN::Error to only take 4 bytes instead of 128.

We should also make some kernel initialization just panic instead
of returning errors since they are required for succesfull boot
anyway.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -17,6 +17,7 @@ set(KERNEL_SOURCES
 	kernel/Debug.cpp
 	kernel/Device.cpp
 	kernel/DeviceManager.cpp
+	kernel/Errors.cpp
 	kernel/Font.cpp
 	kernel/FS/Ext2.cpp
 	kernel/FS/VirtualFileSystem.cpp
