Kernel: Start working on heap

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -26,6 +26,7 @@ set(KERNEL_SOURCES
 	kernel/Input/PS2Keymap.cpp
 	kernel/InterruptController.cpp
 	kernel/kernel.cpp
+	kernel/Memory/Heap.cpp
 	kernel/Memory/kmalloc.cpp
 	kernel/PCI.cpp
 	kernel/PIC.cpp
